--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,3 +5,6 @@ homepage: https://github.com/AndreBaltazar8/fabu_utils
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
+
+dev_dependencies:
+  test: ^1.19.3
