improvement: change README.md for release

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fabu_utils
-description: Utils package
+description: Extensions and other utilities for Dart and Flutter projects.
 version: 1.0.0
 homepage: https://github.com/AndreBaltazar8/fabu_utils
 
